added content to assignment 2

--- a/classLessons.html
+++ b/classLessons.html
@@ -151,6 +151,7 @@
                     The following code segment shows an optional argument in use.
                 </p>
                 <img class="centeredImg" src="images/optionalArguments.png" alt="optional argument example">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/s8Ly9w4xsk0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h6>Sources</h6>
                 <p class="sourcePTag">
                     <a href="https://www.markhansen.co.nz/javascript-optional-parameters/">markhansen.co</a><br>
@@ -171,6 +172,7 @@
                     The following code snippet shows how rest parameters can be used.
                 </p>
                 <img class="centeredImg" src="images/restParameters.png" alt="rest parameters example">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/f55hmMIdHqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h6>Sources</h6>
                 <p class="sourcePTag">
                     <a href="https://javascript.info/rest-parameters-spread">javascript.info</a><br>
@@ -206,6 +208,7 @@
                     random number generator, that can be used for say generating random numbers for test cases.
                 </p>
                 <img class="centeredImg" src="images/nestedFunction.png" alt="nested function example">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/9vKRyu-jzyc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h6>Sources</h6>
                 <p class="sourcePTag">
                     <a href="https://javascript.info/closure">javascript.info</a>
@@ -214,7 +217,9 @@
         </div>
     </div>
     <!-- End of main content -->
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
 </body>
 </html>
