--- a/websiteInfo.html
+++ b/websiteInfo.html
@@ -66,16 +66,16 @@
         <div class="col-md-12">
           <h2>Fonts</h2>
           <p>For the fonts I went to <a href="https://fontjoy.com">FontJoy.com</a>, I then cycled through some fonts till a few cought my eye, then I locked them in. The fonts I used are...  <br> 
-            <ul>
+            <ul class="websiteInfoLists">
               <li>'Montserrat', sans-serif</li>
               <li>'Open Sans', sans-serif</li>
             </ul>
-            I also used the default fonts through Bootstraps framework.</p>
+            <P>I also used the default fonts through Bootstraps framework.</p>
           <h2>Color Scheme</h2>
           <p>For picking my color scheme, I used a really cool website called <a href="https://colorhunt.co/">Colorhunt.co</a>,
               here they have beautiful color palettes premade so you can just copy each color and insert your picked color right into your CSS.
                 The colors I used are...
-              <ul>
+              <ul class="websiteInfoLists">
                 <li>#1B262C</li>
                 <li>#E5DFDF</li>
                 <li>#3a3535</li>
