--- a/classLessons.html
+++ b/classLessons.html
@@ -29,9 +29,10 @@
                 My Work
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="articles.html">Articles</a> 
+                <a class="dropdown-item" href="articles.html">Articles/Essays</a> 
                 <a class="dropdown-item" href="tutorials.html">Tutorials</a>
                 <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
+                <a class="dropdown-item" href="objects.html">Object Talk</a>
               </div>
             </li>
             <li class="nav-item">
