--- a/articles.html
+++ b/articles.html
@@ -34,6 +34,7 @@
                 <a class="dropdown-item" href="tutorials.html">Tutorials</a>
                 <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
                 <a class="dropdown-item" href="objects.html">Object Talk</a>
+                <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
               </div>
             </li>
             <li class="nav-item">
@@ -314,6 +315,26 @@
               Relevancy is major. After reading the article, they discuss the importance of thinking about the users that will be visiting a site and also the purpose someone may be visiting a site.
               when developing a website put yourself in the users shoes, as they talk about in the article plan out scenarios that a user may be faced with, traverse the website as if you are the user 
               see if content can be easily found or seen, and more importantly relevant to their visit.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h1>Microservices vs Monolithic Architecture</h1>
+            <p>
+              Monolithic Architecture is set up for traditional server side systems. The entire system's function is based on a single application. This type of Architecture
+              comes with some advatages the first being that it is rather fast to develop, an application can be developed with basic features and then scaled up over time.
+              Monolithic apps can in some cases be faster than microservice apps because they do not have the need to communicate with various APIs. Every piece of software within 
+              a Monolithic system all communicate with the same Database and are located on the same server, they also will use the same file system. Monolithic applications
+              in the long run can become difficult in maintaining because of their tightly coupled processes, where making a single change can create a domino effect causing
+              problems throughout the entire application.  
+            </p>
+            <p>
+              Microservice Architecture is an Architecture where every feature is it's own application. Things like authentification and posting are their own application
+              on their own server but are connected through the use of APIs. connecting seperate applications in general is preformed through the use of JSON API based applications.
+              Microservices are not nearly as tightly coupled as Monolithic applications, each services is not dependent on one another so making a single change wouldn't 
+              effect the other services because they are standalone. One of the major advatages of Microservices is their scalability, you can scale up individual componets
+              instead of having to scale up the application as a whole. Since each component can function without the other, if one compnent fails the others don't.
             </p>
           </div>
         </div>      
