--- a/classLessons.html
+++ b/classLessons.html
@@ -33,6 +33,7 @@
                 <a class="dropdown-item" href="tutorials.html">Tutorials</a>
                 <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
                 <a class="dropdown-item" href="objects.html">Object Talk</a>
+                <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
               </div>
             </li>
             <li class="nav-item">
@@ -46,8 +47,7 @@
           </form>
         </div>
       </nav>
-
-
+      
     <!-- End of nav -->
 
     <!--start of jumbotron-->
