--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <a class="dropdown-item" href="tutorials.html">Tutorials</a>
                 <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
                 <a class="dropdown-item" href="objects.html">Object Talk</a>
+                <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
               </div>
             </li>
             <li class="nav-item">
@@ -62,7 +63,7 @@
 
         <div class="container text-white">
           <h1 class="display-4">Welcome to my Website</h1>
-          <p class="lead">Here you can find all things related to IT 354 <br> Spring Semester 2020</p>
+          <p class="lead">Here you can find all things related to Web Development<br> Spring Semester 2020</p>
           
         </div>
       </div>
@@ -100,6 +101,7 @@
                           <a class="dropdown-item" href="tutorials.html">Tutorials</a>
                           <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
                           <a class="dropdown-item" href="objects.html">Object Talk</a>
+                          <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
                         </div>
                       </div>
                     </div>
@@ -137,8 +139,6 @@
       $(this).attr("src", sourceFile);
       var video = this.parentElement;
       video.load();
-      // uncomment if video is not autoplay
-      //video.play();
     });
   
   }
