--- a/tutorials.html
+++ b/tutorials.html
@@ -36,6 +36,7 @@
               <a class="dropdown-item" href="tutorials.html">Tutorials</a>
               <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
               <a class="dropdown-item" href="objects.html">Object Talk</a>
+              <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
             </div>
           </li>
           <li class="nav-item">
