--- a/classLessons.html
+++ b/classLessons.html
@@ -34,6 +34,9 @@
                 <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
                 <a class="dropdown-item" href="objects.html">Object Talk</a>
                 <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
+                <a class="dropdown-item" href="modules.html">modules</a>
+                <a class="dropdown-item" href="higherOrderFunctions.html">Higer Order Functions</a>
+                <a class="dropdown-item" href="advancedArrayMethods.html">Advanced Array Methods</a>
               </div>
             </li>
             <li class="nav-item">
@@ -47,7 +50,7 @@
           </form>
         </div>
       </nav>
-      
+
     <!-- End of nav -->
 
     <!--start of jumbotron-->
