--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
                 <a class="dropdown-item" href="objects.html">Object Talk</a>
                 <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
+                <a class="dropdown-item" href="modules.html">Modules</a>
+                <a class="dropdown-item" href="higherOrderFunctions.html">Higer Order Functions</a>
+                <a class="dropdown-item" href="advancedArrayMethods.html">Advanced Array Methods</a>
               </div>
             </li>
             <li class="nav-item">
