--- a/personal.html
+++ b/personal.html
@@ -35,6 +35,11 @@
               <a class="dropdown-item" href="articles.html">Articles</a> 
               <a class="dropdown-item" href="tutorials.html">Tutorials</a>
               <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
+              <a class="dropdown-item" href="objects.html">Object Talk</a>
+              <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
+              <a class="dropdown-item" href="modules.html">modules</a>
+              <a class="dropdown-item" href="higherOrderFunctions.html">Higer Order Functions</a>
+              <a class="dropdown-item" href="advancedArrayMethods.html">Advanced Array Methods</a>
             </div>
           </li>
           <li class="nav-item">
