--- a/prototypalInheritance.html
+++ b/prototypalInheritance.html
@@ -35,6 +35,7 @@
                 <a class="dropdown-item" href="classLessons.html">Class Lessons</a>
                 <a class="dropdown-item" href="objects.html">Object Talk</a>
                 <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
+                <a class="dropdown-item" href="modules.html">modules</a>
               </div>
             </li>
             <li class="nav-item">
