Added videos to higher order functions and advanced array methods

--- a/advancedArrayMethods.html
+++ b/advancedArrayMethods.html
@@ -55,7 +55,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Advanced Array Methods</h1>
-            <p class="lead">Here we will discuss advanced array methods.</p>
+            <p class="lead">Here we will discuss a few advanced array methods.</p>
         </div>
     </div>
 
@@ -137,6 +137,12 @@
                     The <code>find()</code> method finds the first element in an array that passes a test then returns the value it found.
                 </p>
                 <img class="centeredImg" src="images/find.png" alt="find()">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Video Demo</h1>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/PfCgoeO6H_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
