--- a/higherOrderFunctions.html
+++ b/higherOrderFunctions.html
@@ -81,6 +81,7 @@
                 <h3>Functions Returning Functions</h3>
                 <img class="centeredImg" src="images/returningFunction.png" alt="function returning a function">
                 <p>Here you can see add is a function asking for num1 which then returns a function asking for num2.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/PdOhZAWj7O4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
