Assignment 6 on APIs

--- a/articles.html
+++ b/articles.html
@@ -38,6 +38,7 @@
                 <a class="dropdown-item" href="modules.html">modules</a>
                 <a class="dropdown-item" href="higherOrderFunctions.html">Higer Order Functions</a>
                 <a class="dropdown-item" href="advancedArrayMethods.html">Advanced Array Methods</a>
+                <a class="dropdown-item" href="api.html">API's</a>
               </div>
             </li>
             <li class="nav-item">
@@ -367,7 +368,37 @@
               and italic fallbacks while the real web fonts load.
             </p>
           </div>
-        </div>      
+        </div>
+
+        <div class="row">
+          <div class="col-md-12">
+              <h1>Nodejs and the V8 Javascritpt Engine</h1>
+              <p>
+                Node.js is an open-source and cross-platform JavaScript runtime environment. Node.js runs the V8 Engine.
+                The V8 Engine is a powerful open source Javascript engine provided by Google. Now what exactly is a Javascript Engine? It is software that converts
+                Javascript code into lower level or machine code that microprocessors can understand. This is essential to make sure that Javascript
+                runs the same way acrosss multiple devices within diffrent browsers. 
+              </p>
+              <p>
+                In this segement we are focusing on the V8 Javascript engine that is used within google chrome, but there are more than just
+                the v8 Engine there are many for diffrent browsers. For example there are the Rhino, JavaScriptCore, and spider monkey. All of 
+                these engines follow the EchmaScript standards as discussed before, the EchmaScript standards define how the language should work 
+                and what features it should have.  
+              </p>
+              <p>
+                The V8 Engine is written in in C++ and used within Chrome and Nodejs. What is cool is that the V8 Engine can run 
+                standalone within our own C++ program. What that means is we can use our own function implementation in C++ to add 
+                new features to Javascript. This creates a vast amount of flexibility, paired with unrivaled usability within JavaScript.
+                I find the ability to create new JavaScript functionality extremely fascinating, this in its self helps propels web development 
+                into the future.
+              </p>
+              <h6>Sources</h6>
+                <p class="sourcePTag">
+                    <a href="https://developers.google.com/apps-script/guides/v8-runtime">google.com</a> <br>
+                    <a href="https://www.freecodecamp.org/news/understanding-the-core-of-nodejs-the-powerful-chrome-v8-engine-79e7eb8af964/">freecodecamp.org</a>
+                </p>
+          </div>
+      </div>      
     </div> 
     <!-- End of main content -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
