--- a/modules.html
+++ b/modules.html
@@ -38,6 +38,7 @@
                 <a class="dropdown-item" href="modules.html">modules</a>
                 <a class="dropdown-item" href="higherOrderFunctions.html">Higer Order Functions</a>
                 <a class="dropdown-item" href="advancedArrayMethods.html">Advanced Array Methods</a>
+                <a class="dropdown-item" href="api.html">API's</a>
               </div>
             </li>
             <li class="nav-item">
