--- a/tutorials.html
+++ b/tutorials.html
@@ -39,7 +39,8 @@
               <a class="dropdown-item" href="prototypalInheritance.html">Prototypal Inheritance</a>
               <a class="dropdown-item" href="modules.html">modules</a>
               <a class="dropdown-item" href="higherOrderFunctions.html">Higer Order Functions</a>
-                <a class="dropdown-item" href="advancedArrayMethods.html">Advanced Array Methods</a>
+              <a class="dropdown-item" href="advancedArrayMethods.html">Advanced Array Methods</a>
+              <a class="dropdown-item" href="api.html">API's</a>
             </div>
           </li>
           <li class="nav-item">
@@ -203,6 +204,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/GDmlMCICUrA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         
       </div>
+
     </div>
     
 
