--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
               <!-- <a class="nav-link" href="https://www.linkedin.com/in/joshua-tully/">LinkedIn</a> -->
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0" method="GET" action="http://www.google.com/search">      
-            <input class="form-control mr-sm-2" type="text" name="q" placeholder="Search Google" aria-label="Go!">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
       </nav>
       <!--End of nav-->
@@ -67,7 +63,7 @@
 
         <div class="container text-white">
           <h1 class="display-4">Welcome to my Website</h1>
-          <p class="lead">Here you can find all things related to Web Development<br> Spring Semester 2020</p>
+          <p class="lead">Here you can find all things related to Web Development
           
         </div>
       </div>
