changes to video content

--- a/advancedArrayMethods.html
+++ b/advancedArrayMethods.html
@@ -140,12 +140,12 @@
                 <img class="centeredImg" src="images/find.png" alt="find()">
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-12">
                 <h1>Video Demo</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/PfCgoeO6H_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/PfCgoeO6H_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+            </div> 
+        </div> -->
     </div>
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
