--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                   <div class="card align-items-center">
                     <img class="card-img-top" src="Icons/iconfinder_play-circle_383091.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">My Work</h5>
-                      <p class="card-text">Locate assignments</p>
+                      <h5 class="card-title">Lessons</h5>
+                      <p class="card-text">Overview on dev. concepts</p>
                       <div class="btn-group dropup">
                         <button type="button" class="btn btn-outline-dark dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           View
