--- a/personal.html
+++ b/personal.html
@@ -68,6 +68,9 @@
 
     <!--start of main content-->
     <div class="mainContent">
+      <div class="row">
+       
+      </div>
 
     </div>
     <!--end of main content-->
